Publishing Ofline Edits

--- a/csJv.html
+++ b/csJv.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,22 +13,22 @@
     <div id="background-image"></div>
     <header id="top-banner">
         <div class="container">
-            <h1><a href="./Home.html">Ethan Biekert</a></h1>
-            <h3><a href="./csJv.html">日本人</a></h3>
+            <h1><a href="./HomeJv.html">Ethan Biekert</a></h1>
+            <h3><a href="./cs.html">English</a></h3>
         </div>
     </header>
     <div class="body-container">    
     <section id="main-banner" class="container">
         <div class="description">
-            <h2>Total Comunity Service: 50 Hours</h2>
+            <h2>トータル・コミュニティ・サービス:50 時間</h2>
             <div class="dropdown">
-                <a onclick="toggleDropdown('csDropdown')" class="resume-button">Community Service Documentation</a>
+                <a onclick="toggleDropdown('csDropdown')" class="resume-button">コミュニティサービス文書</a>
                 <div id="csDropdown" class="dropdown-content">
-                   <a href="#" downlad>Play Lights Technician</a>
-                    <a href="#" download>Play Spotlight</a>
-                    <a href="#" download>Play Stage Crew</a>
-                    <a href="#" download>Local Preschool Church Event</a>
-                    <a href="#" downlad>Local Little Leauge</a>
+                   <a href="#" downlad>プレイライトテクニシャン</a>
+                    <a href="#" download>スポットライトを再生</a>
+                    <a href="#" download>プレイステージクルー</a>
+                    <a href="#" download>地元の幼稚園教会のイベント</a>
+                    <a href="#" downlad>地元のリトルリージュ</a>
                 </div>
             </div>
       </section>
