Japanese Link Tree

--- a/HomeJv.html
+++ b/HomeJv.html
@@ -43,7 +43,7 @@
             <div class="dropdown">
                 <a onclick="toggleDropdown('impactdropdown')" class="resume-button">インパクト</a>
                 <div id="impactdropdown" class="dropdown-content">
-                    <a href="./cs.html">社会奉仕</a>
+                    <a href="./csJv.html">社会奉仕</a>
                     <a href="./recomendations.html">推奨 事項</a>
                     <a href="./references.html">参照</a>
                 </div>
