--- a/Home.html
+++ b/Home.html
@@ -39,11 +39,13 @@
                 </div>
                 <a href="./experience.html" class="resume-button">Work Expirence</a>
                 <a href="./certifications.html" class="resume-button">Certifications</a>
+            <div class="dropdown">
                 <a onclick="toggleDropdown('educationDropdown')" class="resume-button">Education</a>
                 <div id="educationDropdown" class="dropdown-content">
                     <a href="./Exeter.html">Secondary School</a>
                     <a href="./bctc.html">3 Year Trade School</a>
                 </div>
+            </div>
                 <a href="./accomplishments.html" class="resume-button">Accomplishments</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('impactdropdown')" class="resume-button">Impact</a>
