Disabling undone portions of the website

--- a/Home.html
+++ b/Home.html
@@ -37,8 +37,8 @@
                     <a href="#">Skype</a>
                     <a href="./Cell.html">Cell/Email</a>
                 </div>
-                <a href="./experience.html" class="resume-button">Work Expirence</a>
-                <a href="./certifications.html" class="resume-button">Certifications</a>
+                <a href="#" class="resume-button" style="background-color: grey;">Work Expirence</a>
+                <a href="$" class="resume-button"style="background-color: grey;">Certifications</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('educationDropdown')" class="resume-button">Education</a>
                 <div id="educationDropdown" class="dropdown-content">
@@ -46,7 +46,7 @@
                     <a href="./bctc.html">3 Year Trade School</a>
                 </div>
             </div>
-                <a href="./accomplishments.html" class="resume-button">Accomplishments</a>
+                <a href="#" class="resume-button"style="background-color: grey;">Accomplishments</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('impactdropdown')" class="resume-button">Impact</a>
                 <div id="impactdropdown" class="dropdown-content">
