Added Information to Exeter

--- a/Exeter.html
+++ b/Exeter.html
@@ -25,7 +25,15 @@
             <h3>2021 - Present</h3>
         </div>
     </section>
-
+    <div class="flex-description">
+<h2>Relevant Course Work</h2>
+   <h3>- Computer Science 
+    - (H) Algebra II 
+    - Electronics
+    ◦ Literature
+    ◦ Biology
+    ◦ (H) Geometry</h3>
+    </div>
 </body>
 </html>
 
