--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
                     <a href="./Cell.html">Cell/Email</a>
                 </div>
                 <a href="#" class="resume-button" style="background-color: grey;">Work Expirence</a>
-                <a href="$" class="resume-button"style="background-color: grey;">Certifications</a>
+                <a href="#" class="resume-button"style="background-color: grey;">Certifications</a>
             <div class="dropdown">
                 <a onclick="toggleDropdown('educationDropdown')" class="resume-button">Education</a>
                 <div id="educationDropdown" class="dropdown-content">
