--- a/bctcJv.html
+++ b/bctcJv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Secondary School</title>
+    <title>Trade School</title>
     <link rel="icon" href="./WebsiteIcon.png" type="image/png">
 </head>
 <body>
@@ -18,11 +18,11 @@
     
     <section id="main-banner" class="container">
         <div class="description">
-            <h2>Exeter Township Senior High School</h2>
-            <h2>----------------------------------</h2>
+            <h2>Berks Career and Technology Center (BCTC)</h2>
+            <h2>-----------------------------------------</h2>
             <h2></h2>
-            <h3>Degree: High School Diploma</h3>
-            <h3>2022 - Present</h3>
+            <h3>Degree: 3 Year Trade Certification (NOCTI)</h3>
+            <h3>2023 - Present</h3>
             <a id="myButton" class="resume-button">Clubs</a>
             <a id="myButton2" class="resume-button">Awards</a>
             <a href="cs.html" class="resume-button">Community Service</a>
@@ -31,11 +31,11 @@
     <div class="flex-description">
     <h2>Relevant Course Work</h2>
    <h3>- Computer Science </h3>
-   <h3> - (H) Algebra II</h3>
-   <h3> - Electronics</h3>
-   <h3>◦ Literature</h3>
-    <h3>◦ Biology</h3>
-    <h3>- (H) Geometry</h3>
+   <h3> - Information Technology</h3>
+   <h3> - Programming</h3>
+   <h3>- Cyber Security</h3>
+    <h3>- Microsoft 365</h3>
+    <h3>- Web Design</h3>
     </div>
 </body>
 <div id="myPopup" class="popup">
@@ -43,17 +43,17 @@
         <h2 style="text-align: center;">Clubs</h2>
         <h2>-----------------------------------------------------------------------------------------------</h2>
         <div style="display: flex;">
-        <h2 style="text-align: left;">Theature:</h2>
-        <h3 style="text-align: right; margin-left: 5%;">Assisted in the production of 2 School plays as a Spotlight and Stage Crew</h3>
+        <h2 style="text-align: left;"> </h2>
+        <h3 style="text-align: right; margin-left: 5%;"></h3>
     </div>
     <div style="display: flex;">
-        <h2 style="text-align: left;">TSA:</h2>
-        <h3 style="text-align: right; margin-left: 60%;">National Trade Competition</h3>
+        <h2 style="text-align: left;"></h2>
+        <h3 style="text-align: right; margin-left: 60%;"></h3>
     </div>
     <div style="display: flex;">
-        <button id="Theature" href="#" class="resume-button">Learn More about Exeter Theature</button>
+       <!--- <button id="Theature" href="#" class="resume-button"></button> -->
         <button id="closePopup" class="resume-button">Close</button>
-        <button id="tsa" href="#" class="resume-button">Learn More about TSA</button>
+       <!--- <button id="tsa" href="#" class="resume-button"></button> -->
     </div>
     </div>
 </div>
@@ -62,16 +62,16 @@
         <h2 style="text-align: center;">Awards</h2>
         <h2>-----------------------------------------------------------------------------------------------</h2>
         <div style="display: flex;">
-        <h2 style="text-align: left;">Silver Eagle:</h2>
-        <h3 style="text-align: right; margin-left: 25%;">Recognition of Academic Performance</h3>
+        <h2 style="text-align: left;"></h2>
+        <h3 style="text-align: right; margin-left: 25%;"></h3>
     </div>
     <div style="display: flex;">
         <h2 style="text-align: left;"></h2>
         <h3 style="text-align: right; margin-left: 10%;"></h3>
     </div>
     <div style="display: flex;">
-        <button id="silverEagle" href="#" class="resume-button">Learn More about Silver Eagle</button>
-        <button id="closePopup2" class="resume-button">Close</button>
+       <!--- <button id="silverEagle" href="#" class="resume-button"></button> -->
+        <button id="closePopup3" class="resume-button">Close</button>
         <!--<button id="tsa" href="#" class="resume-button"></button>-->
     </div>
     </div>
@@ -93,7 +93,7 @@ if (event.target == myPopup) {
 myButton2.addEventListener("click", function () {
 myPopup2.classList.add("show");
 });
-closePopup2.addEventListener("click", function () {
+closePopup3.addEventListener("click", function () {
 myPopup2.classList.remove("show");
 });
 window.addEventListener("click", function (event) {
