--- a/references.html
+++ b/references.html
@@ -25,9 +25,9 @@
             <div style="display: block;">
                 <div style="display: flex; width: 600px;">
                     <h4>Mauro</h4>
-                    <h4>-</h4>
+                    <h4 style="margin: 8%;">-</h4>
                     <h4 style="Width: 100%">+1 (XXX) XXX-XXXX</h4>
-                    <h4>-</h4>
+                    <h4 style="margin: 8%;">-</h4>
                     <h4 style="Width: 100%">Current Boss</h4>
                 </div>
                 <div>
