--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- /TEXT -->
         <!-- FOOT -->
         <div class="uk-position-bottom-center uk-position-small">
-          <span class="uk-text-small uk-text-center">© 2019 | <a href="https://github.com/zzseba78/Kick-Off" title="Partialy Created by KickOff"> Partialy Created by KickOff</a> | Built with <a href="http://getuikit.com" title="Visit UIkit 3 site" target="_blank" data-uk-tooltip><span data-uk-icon="uikit"></span></a></span>
+          <span class="uk-text-small uk-text-center">© 2024 | Created by Ethan Biekert in association with <a href="https://github.com/zzseba78/Kick-Off" title="Credit">"Credits"</a> | Built with <a href="http://getuikit.com" title="Visit UIkit 3 site" target="_blank" data-uk-tooltip><span data-uk-icon="uikit"></span></a></span>
         </div>
         <!-- /FOOT -->
       </div>
