--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="uk-width-1-2 uk-width-expand@m">
             <div class="uk-flex uk-flex-middle">
               <a class="uk-logo uk-navbar-item" href="#">
-                <img src="https://uikitbase.com/library/logo-dark.png" data-src="https://uikitbase.com/library/logo-dark.png" alt="Logo" uk-img>
+                <img src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" data-src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" alt="Logo" uk-img>
               </a>
             </div>
           </div>
