--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <div class="uk-width-1-2 uk-width-expand@m">
             <div class="uk-flex uk-flex-middle">
               <a class="uk-logo uk-navbar-item" href="#">
-                <img src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" data-src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" alt="Logo" style="height: 50px" uk-img>
-                <h2 style="color: white; transform: translateY(30px); font-family: 'Montserrat', sans-serif; font-weight: 300; font-style: italic;">KEBB Software</h2>
+                <img src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" data-src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" alt="Logo" style="height: 100px" uk-img>
+                <h2 style="color: black; transform: translateY(30px); font-family: 'Montserrat', sans-serif; font-weight: 300; font-style: italic;">KEBB Software</h2>
               </a>
             </div>
           </div>
