--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="uk-grid uk-margin-remove-top">
           <div class="uk-width-1-2 uk-width-expand@m">
             <div class="uk-flex uk-flex-middle">
-              <a class="uk-logo uk-navbar-item" href="#">
+              <a class="uk-logo uk-navbar-item" style="display: flex;" href="#">
                 <img src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" data-src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" alt="Logo" style="height: 100px" uk-img>
                 <h2 style="color: black; transform: translateY(30px); font-family: 'Montserrat', sans-serif; font-weight: 300; font-style: italic;">KEBB Software</h2>
               </a>
@@ -58,12 +58,10 @@
               <ul class="uk-navbar-nav">
                 <li class="uk-active"><a href="#">Home</a></li>
                 <li>
-                  <a href="#">Services</a>
+                  <a href="#">Passion Projects</a>
                   <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
-                      <li><a href="#">Ocean freight forwarding</a></li>
-                      <li><a href="#">Customs house brokerage</a></li>
-                      <li><a href="#">Transportation & Distribution</a></li>
+                      <li><a href="#">Kebb Coin</a></li>
                     </ul>
                   </div>
                 </li>
