--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         <div class="uk-grid uk-margin-remove-top">
           <div class="uk-width-1-2 uk-width-expand@m">
             <div class="uk-flex uk-flex-middle">
-              <a class="uk-logo uk-navbar-item" style="display: flex;" href="#">
-                <img src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" data-src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" alt="Logo" style="height: 100px" uk-img>
-                <h2 style="color: black; transform: translateY(30px); font-family: 'Montserrat', sans-serif; font-weight: 300; font-style: italic;">KEBB Software</h2>
+              <a class="uk-logo uk-navbar-item" href="#">
+                <div style="display: flex">
+                  <img src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" data-src="https://ethan-bctc.github.io/KebbCoin/assets/images/logo/MatrixLogo.png" alt="Logo" style="height: 100px" uk-img>
+                  <h2 style="color: black; transform: translateY(30px); font-family: 'Montserrat', sans-serif; font-weight: 300; font-style: italic; margin-top: 0px;">KEBB Software</h2>
+              </div>
               </a>
             </div>
           </div>
