--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     </ul>
                   </div>
                 </li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">Grades</a></li>
+                <li><a href="#">Recomendation Letters</a></li>
                 <li><a href="#">Contacts</a></li>
               </ul>
             </nav>
@@ -106,7 +106,7 @@
     <!--/Navigation-->
 
     <!-- TEXT -->
-        <div class="uk-container uk-container-small uk-flex-auto uk-text-center" data-uk-scrollspy="target: > .animate; cls: uk-animation-slide-bottom-small uk-invisible; delay: 300">
+        <div class="uk-container uk-container-small uk-flex-auto uk-text-center" data-uk-scrollspy="target: > .animate; cls: uk-animation-slide-bottom-small uk-invisible; delay: 300" style="justify-content: center;">
           <h1 class="uk-heading-primary animate uk-invisible" style="font-weight: 700;">Sleek, Fast and Reliable.</h1>
           <div class="uk-width-4-5@m uk-margin-auto animate uk-invisible">
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad, reiciendis maxime, facilis nam natus incidunt provident.</p>
