--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
     <!--/Navigation-->
 
     <!-- TEXT -->
-        <div class="uk-container uk-container-small uk-flex-auto uk-text-center" data-uk-scrollspy="target: > .animate; cls: uk-animation-slide-bottom-small uk-invisible; delay: 300" style="justify-content: center;">
+    <div style="justify-content: center;">
+        <div class="uk-container uk-container-small uk-flex-auto uk-text-center" data-uk-scrollspy="target: > .animate; cls: uk-animation-slide-bottom-small uk-invisible; delay: 300">
           <h1 class="uk-heading-primary animate uk-invisible" style="font-weight: 700;">Sleek, Fast and Reliable.</h1>
           <div class="uk-width-4-5@m uk-margin-auto animate uk-invisible">
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad, reiciendis maxime, facilis nam natus incidunt provident.</p>
@@ -116,6 +117,7 @@
             <a class="uk-button uk-button-primary uk-button-large uk-width-2-3 uk-width-auto@s" data-uk-icon="check" title="Learn More">TRY IT OUT</a>
           </div>
         </div>
+      </div>
     <!-- /TEXT -->
 
     <!-- FOOT -->
