--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <li class="uk-active"><a href="#">Home</a></li>
                 <li>
                   <a href="#">Passion Projects</a>
-                  <div class="uk-navbar-dropdown">
+                  <div class="uk-navbar-dropdown" style="border-radius: 10px; margin-top: 10px;">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
-                      <li><a href="#">Kebb Coin</a></li>
+                      <li><a href="https://ethan-bctc.github.io/KebbCoin/index.html">Kebb Coin</a></li>
                     </ul>
                   </div>
                 </li>
