--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </style>
 
       <!--==========JS==========-->
-        <script href="js/uikit.min.js"></script>
-        <script href="js/uikit.js"></script>
-        <script href="js/uikit-icons.js"></script>
-        <script href="js/uikit-icons.min.js"></script>
+        <script src="js/uikit.min.js"></script>
+        <script src="js/uikit.js"></script>
+        <script src="js/uikit-icons.js"></script>
+        <script src="js/uikit-icons.min.js"></script>
   </head>
 
   <body>
